# ros2_keyboard_control

./: .gitignore  README.md  keyboard_test.py
.trae/documents/: keyboard_controller_plan.md
src/keyboard_controller/: CMakeLists.txt  package.xml  setup.py
src/keyboard_controller/keyboard_controller/: keyboard_node.py
src/keyboard_controller/scripts/: keyboard_node
