<?xml version="1.0"?>
<package>
  <name>keyboard_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lizhongjia02@bgyfw.com">droid</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
